syntax = "proto3";

package wallguard_cli;

service WallguardCli {
    rpc GetStatus(Empty) returns (Status);
    rpc GetCapabilities(Empty) returns (Caps);
    rpc JoinOrg(JoinOrgReq) returns (JoinOrgRes);
    rpc LeaveOrg(Empty) returns (LeaveOrgRes);
}

message Empty {}

message Status {
    oneof state {
        Idle idle = 1;
        Connected connected = 2;
        Error error = 3;
    }
}

message Idle {
    string message = 1;
}

message Connected {
    string org_id = 1;
    bool traffic = 2;
    bool telemetry = 3;
    bool sysconfig = 4;
}

message Error {
    string message = 1;
}

message Caps {
    bool traffic = 1;
    bool telemetry = 2;
    bool sysconfig = 3;
}

message JoinOrgReq {
    string org_id = 1;
}

message JoinOrgRes {
    bool success = 1;
    string message = 2;
}

message LeaveOrgRes {
    bool success = 1;
    string message = 2;
}
